@@ -4,6 +4,9 @@ Supported Presently
 
 Changelog for 1.3.11
 * Fixed outstanding report for payment reversal and partial payments (Chris T)
+* Fixed handling of non-existing roles in menu grants (Chris T)
+* Added reverse_bank_recs setting for those that want to
+  do recs from bank perspective (Chris T)
 
 Changelog for 1.3.10
 * Fixes for permissions for exchangerate table (Erik H)
